<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddExpenseActivity" >

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/data_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/selected_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date_label"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/date_label"
        android:text="@string/todays_date_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/calendar_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/date_label"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="showDatePicker"
        android:src="@drawable/ic_action_calendar" />

    <TextView
        android:id="@+id/expense_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/calendar_imageview"
        android:layout_marginTop="24dp"
        android:text="@string/amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/expense_amount_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/expense_amount_label"
        android:layout_alignBottom="@+id/expense_amount_label"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/expense_amount_label"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/spenton_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expense_amount_label"
        android:layout_below="@+id/expense_amount_edittext"
        android:layout_marginTop="28dp"
        android:text="@string/spenton_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   
        <RadioButton
            android:id="@+id/food_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Food"
           android:layout_below="@+id/spenton_label"
            android:text="@string/radio_food"/>
 
        <RadioButton
            android:id="@+id/travel_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Travel"
            android:layout_below="@+id/food_radio"
            android:text="@string/radio_travel" />

        <RadioButton
            android:id="@+id/rent_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Rent"
            android:layout_below="@+id/travel_radio"
            android:text="@string/radio_rent" />

        <RadioButton
            android:id="@+id/leisure_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Leisure"
            android:layout_alignLeft="@+id/drink_radio"
            android:layout_below="@+id/drink_radio"
            android:text="@string/radio_leisure" />

        <RadioButton
            android:id="@+id/party_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Party"
            android:layout_alignBaseline="@+id/rent_radio"
            android:layout_alignBottom="@+id/rent_radio"
            android:layout_alignLeft="@+id/leisure_radio"
            android:text="@string/radio_party" />

        <RadioButton
            android:id="@+id/drink_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Drink"
            android:layout_below="@+id/spenton_label"
            android:layout_centerHorizontal="true"
            android:text="@string/radio_drink" />

        <RadioButton
            android:id="@+id/gfbf_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="GfBf"
            android:layout_alignRight="@+id/health_radio"
            android:layout_below="@+id/health_radio"
            android:text="@string/radio_gfbf" />

        <RadioButton
            android:id="@+id/other_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Other"
            android:layout_alignBaseline="@+id/party_radio"
            android:layout_alignBottom="@+id/party_radio"
            android:layout_alignLeft="@+id/gfbf_radio"
            android:text="@string/radio_other" />

        <RadioButton
            android:id="@+id/health_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="Health"
            android:layout_above="@+id/leisure_radio"
            android:layout_alignParentRight="true"
            android:text="@string/radio_health" />

        <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rent_radio"
            android:layout_marginTop="25dp"
            android:text="@string/note_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/note_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/note_label"
            android:layout_alignRight="@+id/other_radio"
            android:layout_below="@+id/note_label"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/note_editview_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/cancel_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/note_edittext"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="18dp"
            android:onClick="cancelExpense"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/save_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cancel_expense_button"
            android:layout_alignRight="@+id/note_edittext"
            android:layout_marginRight="16dp"
            android:onClick="saveExpense"
            android:text="@string/save_button" />

</RelativeLayout>